# MASS

./: .gitignore  CMakeLists.txt  README.md
core/: BVH.cpp  BVH.h  CMakeLists.txt  Character.cpp  Character.h  Environment.cpp  Environment.h  Muscle.cpp
data/motion/: backflip.bvh  balance.bvh  cart.bvh  dance.bvh  kick.bvh  pirouette.bvh  run.bvh  walk.bvh
python/: CMakeLists.txt
render/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
